#3 update /doc avec redocly
