# app/Controller/api/Station/StationIdController.php
@@ -8,18 +8,29 @@ use Studoo\EduFramework\Core\Controller\Request;
 
 class StationIdController implements ControllerInterface
 {
-	#[Attributes\Get(path: '/api/station/{id}')]
-    #[Attributes\Parameter(name: 'id', in: 'path', required: true, schema: new Attributes\Schema(type: 'integer'))]
-    #[Attributes\Link(
-        link: 'stations',
-        operationId: 'getStations',
-        parameters: [
-            'id' => '$response.body#/station_id'
-        ]
+	#[Attributes\Get(
+        path: '/api/station/{id}',
+        operationId: 'getStationById',
+        description: 'Récupérer les informations d une station par son ID (station_id)<br>
+        La description des champs:<br>
+        - station_id: ID de la station<br>
+        - stationCode: Code de la station<br>
+        - name: Nom de la station<br>
+        - lat: Latitude de la station<br>
+        - lon: Longitude de la station<br>
+        - capacity: Capacité de la station<br>
+        '
+    )]
+    #[Attributes\Parameter(
+        name: 'id',
+        description: 'ID de la station',
+        in: 'path',
+        required: true,
+        schema: new Attributes\Schema(type: 'integer')
     )]
 	#[Attributes\Response(
         response: '200',
-        description: 'Liste d\'une station',
+        description: 'Liste d\'une station est transmise avec succès',
         content: new Attributes\MediaType(
             mediaType: 'application/json',
             examples: [
